Let a person sign in, at Keycloak rather than here
NAJEM had no way for a human to authenticate: it validated bearer tokens and
nothing else, so the screens were reachable only in permit-all. There is now a
sign-in page, and it holds a link rather than a form -- Keycloak is the identity
provider, the password is typed there, and nothing here receives, stores or
compares one. The page exists so that a person is told where they are being
sent before they are sent there, which is otherwise the shape of a phishing
redirect.

Two filter chains, because the surfaces prove identity differently. /api/**
takes bearer tokens and stays stateless; the screens run the authorization-code
flow and get a session. Left as one chain, an unauthenticated API call would be
answered with a 302 to Keycloak's HTML login form where a machine client
expected 401 -- a broken-looking endpoint rather than a missing token.

The identity plumbing is the part that could have gone wrong quietly.
Controllers ask for a Jwt, so somebody who signed in through the browser reached
them as null -- and the rule for "no token" is to fall back to the configured
platform operator. Every signed-in person would have acted as one shared
account, and nothing would have failed: the operator has an agency, so the
screens render and a manager is shown somebody else's book. Reverting that one
line makes an uninvited stranger answer 200 with the operator's agency instead
of 403; both tests assert it.

Signing in grants nothing. NAJEM is invite-only, so a valid Keycloak account
with no invitation is refused -- in those words rather than "Brak dostępu",
because it is an invitation problem and not a permissions one. Same refusal,
honest wording, and a way to sign out again rather than only the back button.

tools/seed-keycloak.sh prepares the realm reproducibly. It was written after
configuring it by hand, which is the wrong order, and two things it does were
found only by asking for a token and reading the claims: PKCE 